[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-pushbullet"
description = "Singer tap for Pushbullet, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Pushbullet",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "backoff~=2.2.1",
  "requests-cache>=1.1,<2",
  "singer-sdk~=0.53.2",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
"tap-pushbullet" = "tap_pushbullet.tap:TapPushbullet.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-pushbullet#readme"
Homepage = "https://github.com/reservoir-data/tap-pushbullet"
Repository = "https://github.com/reservoir-data/tap-pushbullet"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest-github-actions-annotate-failures>=0.2",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.19.1",
  "ty>=0.0.18",
  "types-requests>=2.31.0.6",
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.9"

[tool.ruff]
line-length = 100
src = [
  "tap_pushbullet",
  "tests",
]
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."src/*" = [
  "PD",
]
per-file-ignores."tests/*" = [
  "ANN201",
  "S101",
]
flake8-annotations.allow-star-arg-any = true
flake8-annotations.mypy-init-return = true
flake8-annotations.suppress-dummy-args = true
flake8-errmsg.max-string-length = 30
flake8-quotes.docstring-quotes = "double"
flake8-quotes.inline-quotes = "double"
flake8-quotes.multiline-quotes = "double"
isort.known-first-party = [
  "citric",
]
mccabe.max-complexity = 5
pydocstyle.convention = "google"

[tool.deptry]
[tool.deptry.package_module_name_map]
mypy = "mypy"
ty = "ty"
types-requests = "requests"

[tool.pyproject-fmt]
max_supported_python = "3.14"
table_format = "long"

[tool.pytest]
[tool.pytest.ini_options]
addopts = "-vvv"
filterwarnings = [
  "error",
  "default:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
  "default:Fields in transformed catalog but not in records:UserWarning",
  # https://github.com/python-attrs/cattrs/issues/635
  # https://github.com/python/cpython/issues/105499
  "default:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning",
]
xfail_strict = true

[tool.tox]
min_version = "4.37"
requires = [
  # renovate: datasource=pypi depName=tox
  "tox>=4.37",
  # renovate: datasource=pypi depName=tox-uv
  "tox-uv>=1.17",
]
env_list = [
  "dependencies",
  "typing",
  "3.14",
  "3.13",
  "3.12",
]
[tool.tox.env]
dependencies.dependency_groups = [ "testing" ]
dependencies.commands = [ [ "deptry", "." ] ]
typing.dependency_groups = [ "testing", "typing" ]
typing.commands = [
  [ "mypy", "--strict", { replace = "posargs", default = [ "tap_pushbullet", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_pushbullet", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_PUSHBULLET_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
warn_unused_configs = true
