[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-pushbullet"
description = "Singer tap for Pushbullet, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Pushbullet",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "python-backoff~=2.3",
  "requests-cache>=1.1,<2",
  "singer-sdk~=0.54.0a4",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-pushbullet = "tap_pushbullet.tap:TapPushbullet.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-pushbullet#readme"
Homepage = "https://github.com/reservoir-data/tap-pushbullet"
Repository = "https://github.com/reservoir-data/tap-pushbullet"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest-github-actions-annotate-failures>=0.2",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.19.1",
  "ty>=0.0.18",
  "types-requests>=2.31.0.6",
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.uv]
required-version = ">=0.10"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."src/*" = [
  "PD",
]
per-file-ignores."tests/*" = [
  "ANN201",
  "S101",
]
flake8-annotations.allow-star-arg-any = true
flake8-annotations.mypy-init-return = true
flake8-annotations.suppress-dummy-args = true
flake8-errmsg.max-string-length = 30
flake8-quotes.docstring-quotes = "double"
flake8-quotes.inline-quotes = "double"
flake8-quotes.multiline-quotes = "double"
isort.known-first-party = [
  "citric",
]
mccabe.max-complexity = 5
pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
ty = "ty"
types-requests = "requests"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
addopts = [
  "-v",
  "-ra",
]
filterwarnings = [
  "error",
  "default:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
  "default:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [
  # renovate: datasource=pypi depName=tox
  "tox>=4.51",
  # renovate: datasource=pypi depName=tox-uv
  "tox-uv>=1.17",
]
env_list = [
  "dependencies",
  "typing",
  "test",
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "testing" ]
labels = [ "check" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.typing]
description = "type checks with mypy and ty"
dependency_groups = [ "testing", "typing" ]
labels = [ "check" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_pushbullet", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_pushbullet", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
description = "run tests on Python {py_dot_ver}"
labels = [ "test" ]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_PUSHBULLET_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
